# LogicalMutations

./: .gitignore  LogicalMutations.cabal  README.md  Setup.hs
src/: Evaluation.hs  Language.hs  Main.hs  Mutation.hs  MutationConfiguration.hs  MutationReport.hs  Normalization.hs  OptimizedMutation.hs  Substitution.hs  Treefication.hs  VariableHelpers.hs
test/: EvaluationTests.hs  GeneratingMutantsTests.hs  LanguageTests.hs  MutationTests.hs  NormalizationTests.hs  OptimizedMutationTests.hs  SubstitutionTests.hs  TreeficationTests.hs  testMain.hs
test/Helpers/: ExpressionCreators.hs
