name:                 LogicalMutations
version:              0.1.0.0
synopsis:             
-- description:
-- license:
-- license-file:
homepage:             
author:               Tomasz Lewowski
maintainer:           tomasz.lewowski@wp.eu
category:             
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable LogicalMutations
  main-is:              Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5,
                        pretty-show >= 1.6.9,
                        containers >= 0.5.7
  hs-source-dirs:       src
  default-language:     Haskell2010

test-suite Tests
  default-language:     Haskell2010
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test, src
  main-is:              testMain.hs
  build-depends:        base >= 4.7 && < 5,
                        containers >= 0.5.7,
                        tasty >= 0.11,
                        tasty-quickcheck,
                        tasty-smallcheck,
                        tasty-hunit
